--- a/src/App.css
+++ b/src/App.css
@@ -227,6 +227,8 @@ nav a:hover {
 }
 
 .edu img {
+    width: 130px;
+    height: 130px;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
